example/source.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-demo
  labels:
    app: example
spec:
  replicas: 4
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
        routeId: example
        pod-template-hash: 7564juhy8m6n785i
    spec:
      imagePullSecrets:
        - name: edas-images-dockercfg
        - name: shared-edas-images-dockercfg
      containers:
        - name: example
          image: nginx
          ports:
            - containerPort: 18081
